# ELE00046C-S2-A-Electronics-Project-1

./: .gitignore  .mbed  CMakeLists.txt  LICENSE  README.md  TextLCD.lib  main2.cpp  mbed_app.json  mbedlcd.lib  start.ps1
.github/workflows/: c-cpp.yml
src/: IRremote.cpp  IRremote.hpp  LCD1602.hpp  STM32.cpp  STM32.hpp  card_suit_characters.hpp  custom_characters.hpp  main.cpp  pins.hpp  poker.hpp  utilities.hpp
